force-app/main/default/objects/Product_Category_Charge__c/Product_Category_Charge__c.object-meta.xml
<CustomObject>
    <label>Product Category Charge</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Category Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>