force-app/main/default/objects/Product_Category_Charge__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category_Charge__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>330087</fullName>
            </value>
            <value>
                <fullName>335010</fullName>
            </value>
            <value>
                <fullName>335022</fullName>
            </value>
            <value>
                <fullName>628004</fullName>
            </value>
            <value>
                <fullName>636007</fullName>
            </value>
            <value>
                <fullName>550021</fullName>
            </value>
            <value>
                <fullName>335037</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>