force-app/main/default/objects/Product_Category_Charge__c/fields/Bus_Area__c.field-meta.xml
<CustomField>
    <fullName>Bus_Area__c</fullName>
    <label>Bus. Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category_Charge__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>BA301</fullName>
            </value>
            <value>
                <fullName>BA302</fullName>
            </value>
            <value>
                <fullName>BA303</fullName>
            </value>
            <value>
                <fullName>BA306</fullName>
            </value>
            <value>
                <fullName>BA82</fullName>
            </value>
            <value>
                <fullName>BA84</fullName>
            </value>
            <value>
                <fullName>BA85</fullName>
            </value>
            <value>
                <fullName>BA86</fullName>
            </value>
            <value>
                <fullName>BA87</fullName>
            </value>
            <value>
                <fullName>BA88</fullName>
            </value>
            <value>
                <fullName>BA89</fullName>
            </value>
            <value>
                <fullName>BA93</fullName>
            </value>
            <value>
                <fullName>BA94</fullName>
            </value>
            <value>
                <fullName>BA95</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>