force-app/main/default/objects/Product_Category_Charge__c/fields/Check_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Check_Request_ID__c</fullName>
    <label>Check Request ID</label>
    <referenceTo>Check_Request__c</referenceTo>
    <relationshipLabel>Product Category Charges</relationshipLabel>
    <relationshipName>Product_Category_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>