force-app/main/default/objects/Product_Category_Charge__c/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <label>DC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 (Wholesale)</fullName>
            </value>
            <value>
                <fullName>20 (Retail)</fullName>
            </value>
            <value>
                <fullName>40 (Export)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>