force-app/main/default/objects/Product_Category_Charge__c/fields/Internal_Order__c.field-meta.xml
<CustomField>
    <fullName>Internal_Order__c</fullName>
    <label>Internal Order</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category_Charge__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#22041</fullName>
            </value>
            <value>
                <fullName>#22042</fullName>
            </value>
            <value>
                <fullName>#22043</fullName>
            </value>
            <value>
                <fullName>#22044</fullName>
            </value>
            <value>
                <fullName>#22201</fullName>
            </value>
            <value>
                <fullName>#24381</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>