force-app/main/default/objects/Product_Category_Charge__c/fields/Product_Category_Charge__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Charge__c</fullName>
    <label>Product Category Charge</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/S Acrylics</fullName>
            </value>
            <value>
                <fullName>A/S Chinaware</fullName>
            </value>
            <value>
                <fullName>A/S Fittings/Repair Parts</fullName>
            </value>
            <value>
                <fullName>A/S Furnitures</fullName>
            </value>
            <value>
                <fullName>A/S Metals &amp; Americast</fullName>
            </value>
            <value>
                <fullName>ACRYLIC</fullName>
            </value>
            <value>
                <fullName>All Grohe</fullName>
            </value>
            <value>
                <fullName>AMERICAST</fullName>
            </value>
            <value>
                <fullName>AMERICAST  (LABOR)</fullName>
            </value>
            <value>
                <fullName>AMERICAST  (MISC)</fullName>
            </value>
            <value>
                <fullName>CHAMPION TOILETS (LABOR)</fullName>
            </value>
            <value>
                <fullName>CHINA AFWALLS (LABOR)</fullName>
            </value>
            <value>
                <fullName>CHINAWARE - TIFFIN</fullName>
            </value>
            <value>
                <fullName>Crane Acrylics</fullName>
            </value>
            <value>
                <fullName>Crane Chinaware</fullName>
            </value>
            <value>
                <fullName>Crane ES</fullName>
            </value>
            <value>
                <fullName>DXV Acrylics</fullName>
            </value>
            <value>
                <fullName>DXV Chinaware</fullName>
            </value>
            <value>
                <fullName>DXV Fittings</fullName>
            </value>
            <value>
                <fullName>ENAMEL STEEL</fullName>
            </value>
            <value>
                <fullName>Fiat</fullName>
            </value>
            <value>
                <fullName>FITTINGS/REPAIR PARTS</fullName>
            </value>
            <value>
                <fullName>Grohe Plumbing</fullName>
            </value>
            <value>
                <fullName>Grohe Warranty</fullName>
            </value>
            <value>
                <fullName>SOURCEDWARE</fullName>
            </value>
            <value>
                <fullName>STEEL TUBS (LABOR)</fullName>
            </value>
            <value>
                <fullName>STEEL TUBS (MISC)</fullName>
            </value>
            <value>
                <fullName>Walk In Bath</fullName>
            </value>
            <value>
                <fullName>Shower Door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>