force-app/main/default/objects/Product_Category_Charge__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Description</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Category Charges</relationshipLabel>
    <relationshipName>Product_Category_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>