force-app/main/default/objects/Product_Category_Charge__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <formula>Product_Description__r.ProductCode</formula>
    <label>SKU</label>
    <type>Text</type>
</CustomField>